--- a/area/index.html
+++ b/area/index.html
@@ -6,8 +6,14 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+  <!-- Componentes HTML -->
   <div id="chart"></div>
+  <input type="button" value="Reset" id="reset">
+
+  <!-- Librerias -->
   <script src="https://d3js.org/d3.v3.min.js"></script>
+
+  <!-- Scripts -->
   <script src="index.js"></script>
 </body>
 </html>
