--- a/index.html
+++ b/index.html
@@ -1,2 +1,48 @@
-<h1>Hello</h1>
-<h3>Repositorio para Visualziación de la información</h3>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Denis Parra at PUC Chile</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <img src="./denis-ieee-vis.png?v=1" width="100" height="150"/>
+        <br/>
+        <h1 style="margin-bottom:2px">Denis Parra</h1>
+        <p>Assistant Professor at PUC Chile<br/>
+          dparra[at]ing[dot]puc[dot]cl<br/>
+
+        <script>
+        !function(d,s,id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if(!d.getElementById(id)){
+                js = d.createElement(s);
+                js.id=id;
+                js.src="//platform.twitter.com/widgets.js";
+                fjs.parentNode.insertBefore(js,fjs);
+                }
+            }(document,"script","twitter-wjs");
+        </script>
+        <br/>
+
+          <b>Address</b><br/>
+          Departamento Ciencia de la Computación<br/>
+          Vicuña Mackenna 4860, Macul<br/>
+          Santiago, Chile<br/>
+          zip code 7820436
+          </p>
+
+
+      </header>
+    <div>
+</body>
+</html>
