upgrade profile image

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Denis Parra at PUC Chile</title>
+    <title>Benjamín Ayancán - Visualización</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,30 +15,20 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="./denis-ieee-vis.png?v=1" width="100" height="150"/>
+        <img src="./img/profile.jpeg" width="100" height="150"/>
         <br/>
-        <h1 style="margin-bottom:2px">Denis Parra</h1>
-        <p>Assistant Professor at PUC Chile<br/>
-          dparra[at]ing[dot]puc[dot]cl<br/>
+        <h1 style="margin-bottom:2px">Benjamín Ayancán Guerrero</h1>
+        <p>Estudiante Ingeniería Civil - PUC Chile<br/>
+          beayancan[at]uc[dot]cl<br/>
 
-        <script>
-        !function(d,s,id){
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if(!d.getElementById(id)){
-                js = d.createElement(s);
-                js.id=id;
-                js.src="//platform.twitter.com/widgets.js";
-                fjs.parentNode.insertBefore(js,fjs);
-                }
-            }(document,"script","twitter-wjs");
-        </script>
+
         <br/>
 
-          <b>Address</b><br/>
+          <b>Departamento</b><br/>
           Departamento Ciencia de la Computación<br/>
+          Escuela de Ingeniería<br/>
           Vicuña Mackenna 4860, Macul<br/>
-          Santiago, Chile<br/>
-          zip code 7820436
+          Santiago, Chile
           </p>
 
 
