--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="./img/profile.jpeg" width="100" height="150"/>
+        <img src="./img/profile-01.jpeg" width="127" height="150"/>
         <br/>
         <h1 style="margin-bottom:2px">Benjamín Ayancán Guerrero</h1>
         <p>Estudiante Ingeniería Civil - PUC Chile<br/>
